--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -10,6 +10,6 @@
     <div><img src="img/avatar.webp" alt="avatar" width="200"></div>
     <h1>Уграк Ирина Олеговна</h1>
     <h2>Обо мне</h2>
-    <p>Я учусь на курсе <strong>"Основы frontend разработки"</strong> в университете <strong>Иннополис</strong></p>
+    <p>Я учусь на курсе <strong>"Основы frontend разработки"</strong> в университете <strong>Innopolis</strong></p>
 </body>
 </html>
