--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -11,5 +11,8 @@
     <h1>Уграк Ирина Олеговна</h1>
     <h2>Обо мне</h2>
     <p>Я учусь на курсе <strong>"Основы frontend разработки"</strong> в университете <strong>Innopolis</strong></p>
+    <table cellspacing="2" border="1">
+
+    </table>
 </body>
 </html>
