homework_2 - my blog

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -8,23 +8,165 @@
     </head>
     <body>
         <header>
-            <a href="/"><img src="" alt="" /></a>
-            <h1>Блок об инвестициях</h1>
+            <div style="width: 1200px; margin: 0 auto">
+                <div
+                    style="
+                        display: flex;
+                        align-items: center;
+                        justify-content: flex-start;
+                        margin-bottom: 20px;
+                    "
+                >
+                    <a href="/"
+                        ><img src="img/logo.png" width="200" alt="logo"
+                    /></a>
+                    <h1 style="margin: 0 20px">Блог об инвестициях</h1>
+                </div>
+            </div>
         </header>
         <main>
-            <section></section>
-            <section>
-                <div>
-                    <span>Телефон:</span>
-                    <a href="tel:+79991234567">+7 (999) 123-45-67</a>
-                </div>
-                <br>
-                <div>
-                    <span>Email:</span>
-                    <a href="mailto:invest@gmail.com">invest@gmail.com</a>
-                </div>
-            </section>
+            <div style="width: 1200px; margin: 0 auto">
+                <section style="margin-bottom: 20px">
+                    <h2>Статьи</h2>
+                    <article
+                        style="
+                            padding: 20px;
+                            background-color: #f6f4f2;
+                            border-radius: 10px;
+                            margin-bottom: 10px;
+                        "
+                    >
+                        <h3>Облигации</h3>
+                        <img src="img/bonds.jpg" width="200" alt="bonds" />
+                        <div><em>21.09.2022</em></div>
+                        <p>
+                            <strong>Облигация</strong> - это долговое
+                            обязательство, предоставляющее права ее владельцу на
+                            получение номинальной суммы и заранее определенных
+                            процентов в оговоренный срок.
+                        </p>
+                        <a href="articles/article_3.html">Читать далее</a>
+                    </article>
+                    <article
+                        style="
+                            padding: 20px;
+                            background-color: #f6f4f2;
+                            border-radius: 10px;
+                            margin-bottom: 10px;
+                        "
+                    >
+                        <h3>Акции</h3>
+                        <img src="img/stock.png" width="200" alt="stock" />
+                        <div><em>20.09.2022</em></div>
+                        <p>
+                            <strong>Акция</strong> - это ценная бумага,
+                            подтверждающая собственность ее владельца на
+                            определенную долю уставного фонда акционерного
+                            общества и дающая право на получение соответствующей
+                            части прибыли в виде дивиденда.
+                        </p>
+                        <a href="articles/article_2.html">Читать далее</a>
+                    </article>
+                    <article
+                        style="
+                            padding: 20px;
+                            background-color: #f6f4f2;
+                            border-radius: 10px;
+                            margin-bottom: 10px;
+                        "
+                    >
+                        <h3>Рынок ценных бумаг</h3>
+                        <img src="img/rialto.jpg" width="200" alt="rialto" />
+                        <div><em>19.09.2022</em></div>
+                        <p>
+                            <strong>Биржа</strong> - это рынок, на котором
+                            продаются ценные бумаги. В каждой стране обычно есть
+                            своя биржа, иногда не одна. Самая крупная биржа
+                            России - Московская.
+                        </p>
+                        <a href="articles/article_1.html">Читать далее</a>
+                    </article>
+                </section>
+                <section style="margin-bottom: 20px">
+                    <h2>Контакты</h2>
+                    <div
+                        style="
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-start;
+                            margin-bottom: 10px;
+                        "
+                    >
+                        <img
+                            src="img/phone-call.png"
+                            width="25"
+                            alt="phone"
+                            style="margin-right: 10px"
+                        />
+                        <a href="tel:+79991234567">+7 (999) 123-45-67</a>
+                    </div>
+                    <div
+                        style="
+                            display: flex;
+                            align-items: center;
+                            justify-content: flex-start;
+                        "
+                    >
+                        <img
+                            src="img/email.png"
+                            width="25"
+                            alt="email"
+                            style="margin-right: 10px"
+                        />
+                        <a href="mailto:invest@gmail.com">invest@gmail.com</a>
+                    </div>
+                </section>
+            </div>
         </main>
-        <footer></footer>
+
+        <footer>
+            <div style="width: 1200px; margin: 0 auto">
+                <div
+                    style="
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        padding: 20px 0;
+                    "
+                >
+                    <div>
+                        <a
+                            href="https://innopolis.university/"
+                            target="_blank"
+                            rel="nofollow noopener noreferrer"
+                        >
+                            https://innopolis.university/
+                        </a>
+                    </div>
+                    <div>
+                        <a
+                            href="https://vk.com/id324985050"
+                            target="_blank"
+                            rel="nofollow noopener noreferrer"
+                            style="text-decoration: none"
+                        >
+                            <img src="img/vk.png" width="30" alt="vk" />
+                        </a>
+                        <a
+                            href="https://t.me/ugrairty"
+                            target="_blank"
+                            rel="nofollow noopener noreferrer"
+                            style="text-decoration: none"
+                        >
+                            <img
+                                src="img/telegram.png"
+                                width="30"
+                                alt="telegram"
+                            />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
