mendeleev table end

--- a/homework_3/index.html
+++ b/homework_3/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>
+            <h1 class="table-title">
                 Периодическая таблица химических элементов Д.И. Менделеева ( 8
                 класс )
             </h1>
@@ -53,7 +53,18 @@
                                 </div>
                             </div>
                         </td>
-                        <td colspan="6" class="cell-white"></td>
+                        <td colspan="6" class="cell-white">
+                            <div class="cell-13">
+                                <div class="cell-10">
+                                    <div class="cell-12 color-blue"></div>
+                                    <span class="legenda-text">металлы</span>
+                                </div>
+                                <div class="cell-10">
+                                    <div class="cell-12 color-green"></div>
+                                    <span class="legenda-text">неметаллы</span>
+                                </div>
+                            </div>
+                        </td>
                         <td>
                             <div class="cell-2 color-green">
                                 <div class="cell-title">
@@ -66,12 +77,66 @@
                                 </div>
                             </div>
                         </td>
-                        <td colspan="2" rowspan="3" class="cell-white"></td>
+                        <td colspan="2" rowspan="3" class="cell-white">
+                            <div class="cell-9">
+                                <div class="cell-10">
+                                    <div class="cell-11">
+                                        <div class="cell-symbol color-green">
+                                            Li
+                                        </div>
+                                    </div>
+                                    <span class="legenda-text"
+                                        >Символ элемента</span
+                                    >
+                                </div>
+                                <div class="cell-10">
+                                    <div class="cell-11">
+                                        <div class="cell-name color-green">
+                                            Литий
+                                        </div>
+                                    </div>
+                                    <span class="legenda-text">Название</span>
+                                </div>
+                                <div class="cell-10">
+                                    <div class="cell-11">
+                                        <div class="cell-number color-green">
+                                            3
+                                        </div>
+                                    </div>
+
+                                    <span class="legenda-text"
+                                        >Атомный номер</span
+                                    >
+                                </div>
+                                <div class="cell-10">
+                                    <div class="cell-11">
+                                        <div class="cell-weight color-green">
+                                            6,941
+                                        </div>
+                                    </div>
+
+                                    <span class="legenda-text"
+                                        >Относительная атомная масса</span
+                                    >
+                                </div>
+                                <div class="cell-10">
+                                    <div class="cell-11">
+                                        <div class="cell-isotop color-green">
+                                            [98]
+                                        </div>
+                                    </div>
+                                    <span class="legenda-text"
+                                        >Массовое число устойчивого изотопа
+                                        радиоактивного элемента</span
+                                    >
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                     <tr>
                         <td class="cell-8 color-grey center">2</td>
                         <td class="cell-7 color-grey center">2</td>
-                        <td class="cell-2 color-blue">
+                        <td>
                             <div class="cell-2 color-blue">
                                 <div class="cell-title">
                                     <div class="cell-symbol">Li</div>
@@ -1078,7 +1143,7 @@
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">R2O</div>
+                                <div class="cell-formula">R<sub>2</sub>O</div>
                             </div>
                         </td>
                         <td>
@@ -1088,32 +1153,38 @@
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">R2O3</div>
+                                <div class="cell-formula">
+                                    R<sub>2</sub>O<sub>3</sub>
+                                </div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">RO2</div>
+                                <div class="cell-formula">RO<sub>2</sub></div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">R2O5</div>
+                                <div class="cell-formula">
+                                    R<sub>2</sub>O<sub>5</sub>
+                                </div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">RO3</div>
+                                <div class="cell-formula">RO<sub>3</sub></div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">R2O7</div>
+                                <div class="cell-formula">
+                                    R<sub>2</sub>O<sub>7</sub>
+                                </div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">RO4</div>
+                                <div class="cell-formula">RO<sub>4</sub></div>
                             </div>
                         </td>
                         <td colspan="2" class="cell-white"></td>
@@ -1125,17 +1196,17 @@
                         <td colspan="3" class="cell-white"></td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">RH4</div>
+                                <div class="cell-formula">RH<sub>4</sub></div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">RH3</div>
+                                <div class="cell-formula">RH<sub>3</sub></div>
                             </div>
                         </td>
                         <td>
                             <div class="cell-4 color-grey">
-                                <div class="cell-formula">RH2</div>
+                                <div class="cell-formula">RH<sub>2</sub></div>
                             </div>
                         </td>
                         <td>
@@ -1618,7 +1689,9 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="cell-7 color-grey center">**Актиноиды</td>
+                        <td colspan="2" class="cell-7 color-grey center">
+                            **Актиноиды
+                        </td>
                     </tr>
                 </tbody>
             </table>
