Relative link fixed in href

--- a/homework_3/index.html
+++ b/homework_3/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="./css/main.css" />
         <title>Химия, 8 класс</title>
     </head>
     <body>
@@ -12,13 +12,13 @@
             <div class="header-content">
                 <h1 class="header-title">Химия, 8 класс</h1>
                 <nav class="navigation">
-                    <a href="textbook.html" class="btn btn-default"
+                    <a href="./textbook.html" class="btn btn-default"
                         >Учебные материалы</a
                     >
-                    <a href="mendeleev-table.html" class="btn btn-default"
+                    <a href="./mendeleev-table.html" class="btn btn-default"
                         >Таблица Менделеева</a
                     >
-                    <a href="video.html" class="btn btn-default">Видео материалы</a>
+                    <a href="./video.html" class="btn btn-default">Видео материалы</a>
                 </nav>
                 <p class="header-about">
                     Copyright © Все материалы взяты из учебника по химии за 8
