--- a/homework_3/textbook.html
+++ b/homework_3/textbook.html
@@ -9,13 +9,15 @@
     </head>
     <body>
         <header>
-            <a href="./index.html"
+            <div class="container">
+                <a href="./index.html"
                 ><img
                     class="header__logo"
                     src="./img/logo.png"
                     width="200"
                     alt="logo"
             /></a>
+            </div>
         </header>
         <main>
             <div class="container">
