--- a/homework_3/video.html
+++ b/homework_3/video.html
@@ -9,13 +9,9 @@
     </head>
     <body>
         <header class="header">
-            <a href="./index.html"
-                ><img
-                    class="header__logo"
-                    src="./img/logo.png"
-                    width="200"
-                    alt="logo"
-            /></a>
+            <div class="container">
+                <a href="./index.html"><img class="header__logo" src="./img/logo.png" width="200" alt="logo" /></a>
+            </div>
         </header>
         <main>
             <div class="container">
@@ -27,8 +23,7 @@
                     title="Молочный коктейль дома"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                ></iframe>
+                    allowfullscreen></iframe>
             </div>
         </main>
     </body>
