--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -9,59 +9,59 @@
     </head>
     <body>
         <header class="header">
-            <div class="header__top header-top">
+            <div class="header__top">
                 <div class="container">
-                    <div class="header-top__inner">
-                        <img class="header-top__logo" src="./img/adress-book.png" width="64" alt="adress-book" />
-                        <h1 class="header-top__title">Адресная книга</h1>
+                    <div class="header__top-inner">
+                        <img class="header__top-logo" src="./img/adress-book.png" width="64" alt="adress-book" />
+                        <h1 class="header__top-title">Адресная книга</h1>
                     </div>
                 </div>
             </div>
-            <div class="header__bottom header-bottom">
+            <div class="header__bottom">
                 <div class="container">
-                    <div class="header-bottom__inner">
-                        <div class="header-bottom__pointer">
-                            <ul class="header-bottom__letters">
-                                <li class="header-bottom__letter">
-                                    <a class="header-bottom__anchor" href="#id-1">А</a>
+                    <div class="header__bottom-inner">
+                        <div class="header__bottom-pointer">
+                            <ul class="header__bottom-letters">
+                                <li class="header__bottom-letter">
+                                    <a class="header__bottom-anchor" href="#id-1">А</a>
                                 </li>
-                                <li class="header-bottom__letter">
-                                    <a class="header-bottom__anchor" href="#id-2">Б</a>
+                                <li class="header__bottom-letter">
+                                    <a class="header__bottom-anchor" href="#id-2">Б</a>
                                 </li>
-                                <li class="header-bottom__letter">
-                                    <a class="header-bottom__anchor" href="#id-3">В</a>
+                                <li class="header__bottom-letter">
+                                    <a class="header__bottom-anchor" href="#id-3">В</a>
                                 </li>
-                                <li class="header-bottom__letter">
-                                    <a class="header-bottom__anchor" href="#id-4">Г</a>
+                                <li class="header__bottom-letter">
+                                    <a class="header__bottom-anchor" href="#id-4">Г</a>
                                 </li>
-                                <li class="header-bottom__letter">
-                                    <a class="header-bottom__anchor" href="#id-5">Д</a>
+                                <li class="header__bottom-letter">
+                                    <a class="header__bottom-anchor" href="#id-5">Д</a>
                                 </li>
-                                <li class="header-bottom__letter inactive">Е</li>
-                                <li class="header-bottom__letter inactive">Ё</li>
-                                <li class="header-bottom__letter inactive">Ж</li>
-                                <li class="header-bottom__letter inactive">З</li>
-                                <li class="header-bottom__letter inactive">И</li>
-                                <li class="header-bottom__letter inactive">Й</li>
-                                <li class="header-bottom__letter inactive">К</li>
-                                <li class="header-bottom__letter inactive">Л</li>
-                                <li class="header-bottom__letter inactive">М</li>
-                                <li class="header-bottom__letter inactive">Н</li>
-                                <li class="header-bottom__letter inactive">О</li>
-                                <li class="header-bottom__letter inactive">П</li>
-                                <li class="header-bottom__letter inactive">Р</li>
-                                <li class="header-bottom__letter inactive">С</li>
-                                <li class="header-bottom__letter inactive">Т</li>
-                                <li class="header-bottom__letter inactive">У</li>
-                                <li class="header-bottom__letter inactive">Ф</li>
-                                <li class="header-bottom__letter inactive">Х</li>
-                                <li class="header-bottom__letter inactive">Ц</li>
-                                <li class="header-bottom__letter inactive">Ч</li>
-                                <li class="header-bottom__letter inactive">Ш</li>
-                                <li class="header-bottom__letter inactive">Щ</li>
-                                <li class="header-bottom__letter inactive">Э</li>
-                                <li class="header-bottom__letter inactive">Ю</li>
-                                <li class="header-bottom__letter inactive">Я</li>
+                                <li class="header__bottom-letter inactive">Е</li>
+                                <li class="header__bottom-letter inactive">Ё</li>
+                                <li class="header__bottom-letter inactive">Ж</li>
+                                <li class="header__bottom-letter inactive">З</li>
+                                <li class="header__bottom-letter inactive">И</li>
+                                <li class="header__bottom-letter inactive">Й</li>
+                                <li class="header__bottom-letter inactive">К</li>
+                                <li class="header__bottom-letter inactive">Л</li>
+                                <li class="header__bottom-letter inactive">М</li>
+                                <li class="header__bottom-letter inactive">Н</li>
+                                <li class="header__bottom-letter inactive">О</li>
+                                <li class="header__bottom-letter inactive">П</li>
+                                <li class="header__bottom-letter inactive">Р</li>
+                                <li class="header__bottom-letter inactive">С</li>
+                                <li class="header__bottom-letter inactive">Т</li>
+                                <li class="header__bottom-letter inactive">У</li>
+                                <li class="header__bottom-letter inactive">Ф</li>
+                                <li class="header__bottom-letter inactive">Х</li>
+                                <li class="header__bottom-letter inactive">Ц</li>
+                                <li class="header__bottom-letter inactive">Ч</li>
+                                <li class="header__bottom-letter inactive">Ш</li>
+                                <li class="header__bottom-letter inactive">Щ</li>
+                                <li class="header__bottom-letter inactive">Э</li>
+                                <li class="header__bottom-letter inactive">Ю</li>
+                                <li class="header__bottom-letter inactive">Я</li>
                             </ul>
                         </div>
                     </div>
