--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -37,31 +37,31 @@
                                 <li class="header__bottom-letter">
                                     <a class="header__bottom-anchor" href="#id-5">Д</a>
                                 </li>
-                                <li class="header__bottom-letter inactive">Е</li>
-                                <li class="header__bottom-letter inactive">Ё</li>
-                                <li class="header__bottom-letter inactive">Ж</li>
-                                <li class="header__bottom-letter inactive">З</li>
-                                <li class="header__bottom-letter inactive">И</li>
-                                <li class="header__bottom-letter inactive">Й</li>
-                                <li class="header__bottom-letter inactive">К</li>
-                                <li class="header__bottom-letter inactive">Л</li>
-                                <li class="header__bottom-letter inactive">М</li>
-                                <li class="header__bottom-letter inactive">Н</li>
-                                <li class="header__bottom-letter inactive">О</li>
-                                <li class="header__bottom-letter inactive">П</li>
-                                <li class="header__bottom-letter inactive">Р</li>
-                                <li class="header__bottom-letter inactive">С</li>
-                                <li class="header__bottom-letter inactive">Т</li>
-                                <li class="header__bottom-letter inactive">У</li>
-                                <li class="header__bottom-letter inactive">Ф</li>
-                                <li class="header__bottom-letter inactive">Х</li>
-                                <li class="header__bottom-letter inactive">Ц</li>
-                                <li class="header__bottom-letter inactive">Ч</li>
-                                <li class="header__bottom-letter inactive">Ш</li>
-                                <li class="header__bottom-letter inactive">Щ</li>
-                                <li class="header__bottom-letter inactive">Э</li>
-                                <li class="header__bottom-letter inactive">Ю</li>
-                                <li class="header__bottom-letter inactive">Я</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Е</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ё</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ж</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">З</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">И</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Й</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">К</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Л</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">М</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Н</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">О</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">П</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Р</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">С</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Т</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">У</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ф</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Х</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ц</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ч</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ш</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Щ</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Э</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Ю</li>
+                                <li class="header__bottom-letter header__bottom-letter_inactive">Я</li>
                             </ul>
                         </div>
                     </div>
